--- a/aksiyon.html
+++ b/aksiyon.html
@@ -92,37 +92,37 @@
 
          <!-- başlangıç katman içerik -->
          <div class="container mt-5" style="display: flex;">
-            <div id="carouselExampleAutoplaying" style="position: absolute; margin-top: 50px; margin-left:590px;" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="asdasdsndkjasnkdjslnajdşasndşaksjdnjkasndşaksjd">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="şdlkfnşsldknfasdasldmlaşskmdşalskdmşlsakmdşalskmd">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="abciasmdialsmdilasdişalsdimsaşldalsmaislşdmiasmdasld">
-                  </div>
+          <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="resim/resident evil.jpg" class="d-block w-100">
                 </div>
-                <button class="carousel-control-prev" style="background-color: black;" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+                <div class="carousel-item">
+                  <img src="resim/rdr2.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="resim/doom ethernal.jpg" class="d-block w-100">
+                </div>
               </div>
-        </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+      </div>
 
         <!-- ilk katman içerik -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/god of war.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">God Of War</h5>
                   <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını almasını konu alan bir oyundur</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek için</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
@@ -130,26 +130,26 @@
                 <div class="card-body">
                   <h5 class="card-title">Assasin Cread Valhala</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/resident evil.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Resident Evil Village</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>        
     
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/calisto.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Calisto Protocol</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
             </div>
@@ -158,11 +158,11 @@
         <!-- İkinci Katman İçerik -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/rdr2.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">Red Dead Redemption 2</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
@@ -172,25 +172,25 @@
                 <div class="card-body">
                   <h5 class="card-title">Titanfall</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Doom Ethernal</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>      
 
           <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Call of Duty</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>
         </div>
@@ -199,21 +199,21 @@
         <!-- Üçüncü Katman İçerik  -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-                <img src="..." class="card-img-top" style="background-color: gray;" alt="...">
+                <img src="resim/crysis.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
                   <h5 class="card-title">crysis</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
               
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/ghost of.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Ghost Of Tushima</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek için</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
@@ -223,16 +223,16 @@
                 <div class="card-body">
                   <h5 class="card-title">For Honor</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>    
 
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="resim/uncharted.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Uncharted 4</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Detayı Görmek İçin</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
             </div>
