--- a/ps.html
+++ b/ps.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yarış</title>
+    <title>PS</title>
     <link rel="stylesheet" href="örnek.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"></script>
@@ -92,29 +92,28 @@
 
          <!-- başlangıç katman içerik -->
          <div class="container mt-5" style="display: flex;">
-            <div id="carouselExampleAutoplaying" style="position: absolute; margin-top: 50px; margin-left:590px;" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="..." class="d-block w-100" alt="asdasdsndkjasnkdjslnajdşasndşaksjdnjkasndşaksjd">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="şdlkfnşsldknfasdasldmlaşskmdşalskdmşlsakmdşalskmd">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="abciasmdialsmdilasdişalsdimsaşldalsmaislşdmiasmdasld">
-                  </div>
+          <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="resim/god of war.jpg" class="d-block w-100">
                 </div>
-                <button class="carousel-control-prev" style="background-color: black;" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
+                <div class="carousel-item">
+                  <img src="resim/god of war.jpg" class="d-block w-100">
+                </div>
+                <div class="carousel-item">
+                  <img src="resim/god of war.jpg" class="d-block w-100">
+                </div>
               </div>
-        </div>
-
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+      </div>
         <!-- ilk katman içerik -->
         <div class="container mt-5" style="display: flex;">
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
@@ -122,7 +121,7 @@
                 <div class="card-body" >
                   <h5 class="card-title">Need For Speed:Heat</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
               <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
@@ -130,7 +129,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Forza Horizon 4</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
@@ -140,7 +139,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Dirt Rally 2.0</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>        
     
@@ -149,7 +148,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Mario Kart 8 Deluxe</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
             </div>
@@ -162,7 +161,7 @@
                 <div class="card-body" >
                   <h5 class="card-title">Wreckfest</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
@@ -172,7 +171,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Gran Turismo Sport</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
@@ -181,7 +180,7 @@
             <div class="card-body">
               <h5 class="card-title">F1 2021</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>      
 
@@ -190,7 +189,7 @@
             <div class="card-body">
               <h5 class="card-title">Assetto Corsa</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
             </div>
           </div>
         </div>
@@ -203,7 +202,7 @@
                 <div class="card-body" >
                   <h5 class="card-title">Project CARS 2</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
@@ -213,7 +212,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Burnout Paradise Remastered</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
 
@@ -223,7 +222,7 @@
                 <div class="card-body">
                   <h5 class="card-title">WRC 9</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>    
 
@@ -232,7 +231,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Roket League</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
             </div>
