hakkımızda ve iletişimden önce

--- a/korku.html
+++ b/korku.html
@@ -53,6 +53,10 @@
                                         <hr class="dropdown-divider">
                                     </li>
                                     <li><a class="dropdown-item" href="macera.html">Macera</a></li>
+                                    <li>
+                                      <hr class="dropdown-divider"> 
+                                    </li>
+                                    <li><a class="dropdown-item" href="yarıs.html">Yarış</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
@@ -124,7 +128,7 @@
                 <img src="resim/until dawn.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Until dawn</h5>
-                  <p class="card-text">Until Dawn, tıpkı Alan Wake gibi dizi şeklinde ilerliyor ve her bölümün sonunda psikoloğun odasında uyanıyoruz. Burada psikolog bize, yani konsol başında oturan oyuncuya sesleniyor.</p>
+                  <p class="card-text">Until Dawn, tıpkı Alan Wake gibi dizi şeklinde ilerliyor ve her bölümün sonunda psikoloğun odasında uyanıyoruz.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
               </div>
