--- a/macera.html
+++ b/macera.html
@@ -54,6 +54,10 @@
                                         <hr class="dropdown-divider">
                                     </li>
                                     <li><a class="dropdown-item" href="macera.html">Macera</a></li>
+                                    <li>
+                                      <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="yarıs.html">Yarış</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item dropdown">
@@ -91,13 +95,13 @@
           <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="resim/second son.jpg" class="d-block w-100">
+                  <img src="resim/rdr2.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/elden ring.jpg" class="d-block w-100">
+                  <img src="resim/witcher.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/detroit.jpg" class="d-block w-100">
+                  <img src="resim/ratchet.jpg" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
