--- a/aksiyon.html
+++ b/aksiyon.html
@@ -101,7 +101,7 @@
                   <img src="resim/rdr2.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/doom ethernal.jpg" class="d-block w-100">
+                  <img src="resim/call of duty.jpg" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
