iletişim sayfası olduktan sonra

--- a/aksiyon.html
+++ b/aksiyon.html
@@ -201,7 +201,7 @@
             <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
                 <img src="resim/crysis.jpg" class="card-img-top" style="background-color: gray;" alt="...">
                 <div class="card-body" >
-                  <h5 class="card-title">crysis</h5>
+                  <h5 class="card-title">Crysis</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                   <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
                 </div>
