--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Hakkımızda</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">İletişim</a>
+                <a class="nav-link" href="iletişim.html">İletişim</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -127,9 +127,9 @@
       </div>
 
       <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-        <img src="resim/" class="card-img-top" alt="...">
+        <img src="resim/valhala (1).jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">Assasin Creed</h5>
+          <h5 class="card-title">Assasin Creed Valhala</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
             content.</p>
           <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
@@ -229,7 +229,7 @@
 
 
     <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="resim/mario.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Mario Kart 8 Deluxe</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -239,7 +239,7 @@
     </div>
 
     <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="resim/silent.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Silent Hill</h5>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
