--- a/yarıs.html
+++ b/yarıs.html
@@ -94,13 +94,13 @@
           <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img src="resim/forza.jpg" class="d-block w-100">
+                  <img src="resim/need for speed.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
                   <img src="resim/wrc.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/need for speed.jpg" class="d-block w-100">
+                  <img src="resim/forza.jpg" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -256,7 +256,14 @@
             </ul>
           </nav>
         </div>
-        
-    </div>
+        </div>
+
+
+
+        <div class="container">
+          <div>
+            dasldşaslmd
+          </div>
+        </div>
 </body>
 </html>
