--- a/iletişim.html
+++ b/iletişim.html
@@ -98,7 +98,7 @@
     <div class="container" style="margin-top: 30px;">
         <form>
             <fieldset>
-                <h2 style="text-align: center; list-style-type: none;"><a href="iletişim.html">İletişim Formu</a></h2>
+                <h2 style="text-align: center; list-style-type: none;">İletişim Formu</h2>
                 <div class="mb-3">
                     <input class="form-control" id="exampleFormControlInput1" placeholder="Adınız Soyadınız" type="text"
                         required>
@@ -145,7 +145,7 @@
             }
             else{
                 alertTrigger.addEventListener('click',() => {
-                    appendAlert('Formunuz İletilemedi Tekrar Deneyin','alert')
+                    appendAlert('Formunuz İletilemedi Tekrar Deneyin' )
                 })
             }
         </script>
