--- a/korku.html
+++ b/korku.html
@@ -97,7 +97,7 @@
                   <img src="resim/until dawn.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/dead space.jpg" class="d-block w-100">
+                  <img src="resim/outlast.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
                   <img src="resim/alien.jpg" class="d-block w-100">
