--- a/yarıs.html
+++ b/yarıs.html
@@ -100,7 +100,7 @@
                   <img src="resim/wrc.jpg" class="d-block w-100">
                 </div>
                 <div class="carousel-item">
-                  <img src="resim/forza.jpg" class="d-block w-100">
+                  <img src="resim/dirt.jpg" class="d-block w-100">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
